Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108311

[REG: 6.3->6.4]: When moving a QDockWidget under certain environments it will trigger a warning message

XMLWordPrintable

    • d655391d01 (qt/tqtc-qtbase/dev) 4aeb2674e4 (qt/qtbase/6.4) 4aeb2674e4 (qt/tqtc-qtbase/6.4)

      My test environment is a remote server, with an X11 server provided by my desktop PC using XWin32. When I debug the application and look at the position that the dock window is create at the x-coordinate of the QDockWindow is negative (just over 60 pixels to the left of the screen left hand edge). This isn't a major problem as most of the dock widget is on the screen, and probably is related to the decorations being put on the window in the XWin32 environment.

      The reason that the warning message is raised can be found in qdockwidget.cpp, line 989. The QScreen *orgWdgScreen is initialized with the creation position of the QDockWidget (i.e. screenAt(- 64, 0)). This returns a null pointer as the location is off the screen, and raises the warning message. Once the QDockWidget is docked and undocked the state->widgetInitialPos is set to a point on-screen, so the problem goes away.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes